Updated message for CI/CD demo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>¡Hola DevOps!</h1>
-        <p>Este es mi primer proyecto de CI/CD.</p>
+        <p>¡Este es mi primer proyecto de CI/CD con cambios automatizados!</p>
     </div>
 </body>
 </html>
